addons/kyverno/policies/medtech-fda_part11_esign_linkage-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-fda_part11_esign_linkage
  annotations:
    rulehub.id: medtech.fda_part11_esign_linkage
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: "medtech.fda_part11_esign_linkage: example validation"
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
